# contextgraph

./: CHANGELOG.md  Cargo.toml  README.md
crates/contextgraph-cli/: Cargo.toml
crates/contextgraph-cli/src/: main.rs
crates/contextgraph-cli/tests/: cli.rs
crates/contextgraph-core/: Cargo.toml  LICENSE
crates/contextgraph-core/src/: bisect.rs  commit.rs  diff.rs  error.rs  gc.rs  graph.rs  lib.rs  log.rs  main.rs  materialize.rs  mem.rs  merge.rs  sqlite.rs  store.rs
crates/contextgraph-core/tests/: bisect_proptest.rs  checkout_referential_transparency.rs  compaction.rs  invariants.rs  mcp_integration.rs
crates/contextgraph-mcp/: Cargo.toml
crates/contextgraph-mcp/src/: main.rs
crates/contextgraph-mcp/tests/: mcp_integration.rs
