[package]
name = "contextgraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned, git-like context store for LLM agent conversations"

[dependencies]
blake3.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
